<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="display">Display</string>
    <string name="send">Send</string>
    <string name="textView">Text View</string>
    <string name="enterName">Enter Name</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="next">Next</string>
    <string name="instructions">Please Enter Your Name in the field below</string>

</resources>
